Release history for Joose:

{{ $NEXT }}


    [ENHANCEMENTS]
    
    - added a sanity checks before consuming a role or inheriting from superclass (should evalutes to "true")
    - from now on, include the "Task/Joose/Core" bundle in the root of distribution as "task-joose-core.js"
    
    [API CHANGES]

    - removed support for class extension via `Class` keyword - now it will throw the "Double declaration of [ClassName]" exception
      use ClassName.meta.extend() instead
    
    [BUG FIXES]
    
    - none


3.017     2011-01-12 18:33

    [ENHANCEMENTS]
    
    - added `strToClass` helper function
    - added Joose.A.eachR iterator
    
    [API CHANGES]

    - none
    
    [BUG FIXES]
    
    - none


3.016     2010-12-14 15:33

    [ENHANCEMENTS]
    
    - throw 'Error' instances instead of plain strings in various places
    - initial progress on reflection, allowing to receive the currently running method
    
    [API CHANGES]

    - setters no longer are being used for initial instance initialization (prior 'initialize' method)
    
    [BUG FIXES]
    
    - fixed a very specific bug, related to subclassing non-joose classes with custom constructor


3.015     2010-11-15 13:31


    [ENHANCEMENTS]
    
    - links to OpenJSAN in the documentation replaced with links to GitHub
    
    [API CHANGES]

    -none-
    
    [BUG FIXES]
    
    -none-


3.014     2010-11-01 10:32

    
    [ENHANCEMENTS]
    
    - switching to `npm` only as the distribution channel (migrating from JSAN)
    
    [API CHANGES]

    -none-
    
    [BUG FIXES]
    
    - fixed bug, when instantiating a class with traits and which is a subclass of non-joose class
      it could have been instantiated with wrong parameters

3.013     2010-10-11 15:57

    [ENHANCEMENTS]
    
    -none-
    
    [API CHANGES]

    - returned 'get/setRawValue' methods of the attribute with a bit different semantic (low-level, not documented)
    
    [BUG FIXES]
    
    - none 
