@@ -193,9 +193,14 @@ Joose.O = {
 Joose.I = {
     Array       : function () { return [] },
     Object      : function () { return {} },
-    Function    : function () { return function () {} },
+    Function    : function () { return arguments.callee },
     Now         : function () { return new Date() }
 }
+
+
+// configuration hash
+
+Joose.C = typeof JOOSE_CFG != 'undefined' ? JOOSE_CFG : {}
 
 Joose.is_IE         = '\v' == 'v'
 Joose.is_NodeJS     = Boolean(typeof process != 'undefined' && process.pid)
