@@ -1,7 +1,5 @@
 StartTest(function (t) {
     
-    t.plan(17)
-    
     //==================================================================================================================================================================================
     t.diag("Joose.A.*")
     
@@ -65,6 +63,12 @@ StartTest(function (t) {
     
     t.ok(counter == 1, "Joose.O.each can be stopped by returning a 'false' value")
     t.ok(res === false, 'Result value is correct #2')
+  
+    
+    //==================================================================================================================================================================================
+    t.diag("Joose.I.*")
+    
+    t.ok(Joose.I.Function() === Joose.I.Function, 'Correct empty Function initiazer')
     
     
     //==================================================================================================================================================================================
@@ -73,6 +77,6 @@ StartTest(function (t) {
     t.ok(Joose.O.isFunction(function () {}), 'Function detected correctly')
     
     t.ok(!Joose.O.isFunction(/a/), 'RegExp is not a function')
-    
-    
+
+    t.done()
 })
